# name: test_postgresql_simplify[complex]
  <class 'tuple'> (
    <class 'Or'> {
      alts=<class 'tuple'> (
        <class 'And'> {
          preds=<class 'tuple'> (
            <class 'Is'> {
              types=<class 'tuple'> (
              ),
            },
            <class 'Where'> {
              fields=<class 'dict'> {
              },
            },
          ),
        },
      ),
    },
    '(type_field IN (%s, %s, %s) OR (((data_field ? %s AND data_field->%s = %s::jsonb)) AND (coalesce(data_field->%s <> %s::jsonb, true)) AND ((data_field ? %s AND data_field->%s < %s::jsonb))) OR (((data_field ? %s AND data_field->%s > %s::jsonb)) AND ((data_field ? %s AND data_field->%s <= %s::jsonb)) AND ((data_field ? %s AND data_field->%s >= %s::jsonb))) OR (((data_field ? %s AND data_field->%s >= %s::jsonb) AND (data_field ? %s AND data_field->%s <= %s::jsonb)) AND ((data_field ? %s AND data_field->%s = %s::jsonb) OR (data_field ? %s AND data_field->%s = %s::jsonb))))',
    <class 'list'> [
      'int',
      'str',
      'float',
      'a',
      'a',
      '1',
      'b',
      '2',
      'c',
      'c',
      '3',
      'd',
      'd',
      '4',
      'e',
      'e',
      '5',
      'f',
      'f',
      '6',
      'g',
      'g',
      '7',
      'g',
      'g',
      '8',
      'h',
      'h',
      '9',
      'h',
      'h',
      '10',
    ],
  )
---
# name: test_postgresql_simplify[date_and_time]
  <class 'tuple'> (
    None,
    '((data_field ? %s AND (data_field->>%s)::timestamptz = (%s)::timestamptz) AND (data_field ? %s AND (data_field->>%s)::timestamptz = (%s)::timestamptz) AND coalesce((data_field->>%s)::timestamptz <> (%s)::timestamptz, true) AND coalesce((data_field->>%s)::timestamptz <> (%s)::timestamptz, true))',
    <class 'list'> [
      'a',
      'a',
      '2022-01-27T13:06:47.799859+00:00',
      'b',
      'b',
      '2022-01-27T13:06:47.799859-05:00',
      'c',
      '2022-01-27T13:06:47.799859+00:00',
      'd',
      '2022-01-27T13:06:47.799859-05:00',
    ],
  )
---
# name: test_postgresql_simplify[empty_and]
  <class 'tuple'> (
    <class 'And'> {
      preds=<class 'tuple'> (
      ),
    },
    None,
    None,
  )
---
# name: test_postgresql_simplify[empty_is]
  <class 'tuple'> (
    <class 'Is'> {
      types=<class 'tuple'> (
      ),
    },
    None,
    None,
  )
---
# name: test_postgresql_simplify[empty_or]
  <class 'tuple'> (
    <class 'Or'> {
      alts=<class 'tuple'> (
      ),
    },
    None,
    None,
  )
---
# name: test_postgresql_simplify[empty_where]
  <class 'tuple'> (
    <class 'Where'> {
      fields=<class 'dict'> {
      },
    },
    None,
    None,
  )
---
# name: test_postgresql_simplify[null_where]
  <class 'tuple'> (
    None,
    "(data_field->%s IS NULL OR data_field->%s = 'null' AND data_field ? %s AND data_field->%s != 'null')",
    <class 'list'> [
      'a',
      'a',
      'b',
      'b',
    ],
  )
---
# name: test_postgresql_simplify[simple_and]
  <class 'tuple'> (
    None,
    '(((data_field ? %s AND data_field->%s = %s::jsonb)) AND ((data_field ? %s AND data_field->%s = %s::jsonb)))',
    <class 'list'> [
      'a',
      'a',
      '1',
      'b',
      'b',
      '2',
    ],
  )
---
# name: test_postgresql_simplify[simple_is]
  <class 'tuple'> (
    None,
    'type_field IN (%s, %s, %s)',
    <class 'list'> [
      'str',
      'int',
      'float',
    ],
  )
---
# name: test_postgresql_simplify[simple_or]
  <class 'tuple'> (
    None,
    '(((data_field ? %s AND data_field->%s = %s::jsonb)) OR ((data_field ? %s AND data_field->%s = %s::jsonb)))',
    <class 'list'> [
      'a',
      'a',
      '1',
      'b',
      'b',
      '2',
    ],
  )
---
# name: test_postgresql_simplify[simple_where]
  <class 'tuple'> (
    None,
    '((data_field ? %s AND data_field->%s = %s::jsonb) AND coalesce(data_field->%s <> %s::jsonb, true) AND (data_field ? %s AND data_field->%s < %s::jsonb) AND (data_field ? %s AND data_field->%s > %s::jsonb) AND (data_field ? %s AND data_field->%s <= %s::jsonb) AND (data_field ? %s AND data_field->%s >= %s::jsonb) AND ((data_field ? %s AND data_field->%s >= %s::jsonb) AND (data_field ? %s AND data_field->%s <= %s::jsonb)) AND ((data_field ? %s AND data_field->%s = %s::jsonb) OR (data_field ? %s AND data_field->%s = %s::jsonb)))',
    <class 'list'> [
      'a',
      'a',
      '1',
      'b',
      '2',
      'c',
      'c',
      '3',
      'd',
      'd',
      '4',
      'e',
      'e',
      '5',
      'f',
      'f',
      '6',
      'g',
      'g',
      '7',
      'g',
      'g',
      '8',
      'h',
      'h',
      '9',
      'h',
      'h',
      '10',
    ],
  )
---
